--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -91,7 +91,7 @@ jobs:
 
     - name: List repository contents
       run: |
-        cd ~/work/libft/libft
+        cd ~/work/tester_libft/tester_libft
         echo "Current directory: $(pwd)"
         ls -la
         cd ~/francinette
@@ -123,7 +123,7 @@ jobs:
         whereis norminette
         echo "Norminette version:"
         norminette -v || echo "Failed to get Norminette version"
-        cd ~/work/libft/libft
+        cd ~/work/tester_libft/tester_libft
         echo "Current directory: $(pwd)"
         ls -la
         norminette
@@ -132,9 +132,9 @@ jobs:
     - name: Run Francinette
       id: check_phrase
       run: |
-        rm -rf ~/work/libft/libft_tmp
-        cp -r ~/work/libft/libft ~/work/libft/libft_tmp
-        cd ~/work/libft/libft_tmp
+        rm -rf ~/work/tester_libft/tester_libft_tmp
+        cp -r ~/work/tester_libft/tester_libft ~/work/tester_libft/tester_libft_tmp
+        cd ~/work/tester_libft/tester_libft_tmp
         echo "Current directory: $(pwd)"
         ls -la
         echo "Norminette version:"
@@ -151,11 +151,11 @@ jobs:
         fi
         echo ""
         echo "Emulacion Moulinette:"
-        cat ~/francinette/temp/libft/war-machine/deepthought
+        cat ~/francinette/temp/tester_libft/war-machine/deepthought
         echo ""
         echo "Errores encontrados:"
-        cat ~/francinette/temp/libft/war-machine/errors.log
-        ls -la ~/francinette/temp/libft/
+        cat ~/francinette/temp/tester_libft/war-machine/errors.log
+        ls -la ~/francinette/temp/tester_libft/
         cp output.log ~/francinette/temp/francinette_output.log
         echo "Current directory: $(pwd)"
         ls -la
@@ -173,11 +173,11 @@ jobs:
         path: ~/francinette_exp_tst.tar.gz
         if-no-files-found: warn
 
-    - name: Upload libft.a artifact
+    - name: Upload tester_libft.a artifact
       uses: actions/upload-artifact@v3
       with:
-        name: libft-a
-        path: ~/work/libft/libft/libft.a
+        name: tester_libft-a
+        path: ~/work/tester_libft/tester_libft/tester_libft.a
 
     - name: Checkout repository
       uses: actions/checkout@v4
@@ -195,14 +195,14 @@ jobs:
         fi
         echo "Current directory: $(pwd)"
         ls -la
-        echo "Comenzamos el proceso de actualización de libft.a"
+        echo "Comenzamos el proceso de actualización de tester_libft.a"
         echo "Configurar Git"
         git config user.name "Github Actions"
         git config user.email "felipecela@users.noreply.github.com"
         echo "Verificar si el archivo existe localmente"
-        if [ -f libft.a ]; then
-          echo "Subiendo nuevo libft.a..."
-          git add -f libft.a
+        if [ -f tester_libft.a ]; then
+          echo "Subiendo nuevo tester_libft.a..."
+          git add -f tester_libft.a
           echo "$COMMIT_OUTPUT"
           if echo "$COMMIT_OUTPUT" | grep -q "nothing to commit"; then
             echo "No hay cambios para hacer commit, no se ejecutará git push."
@@ -211,7 +211,7 @@ jobs:
             git push https://${GH_TOKEN}@github.com/felipecela/42_Prj02.git
           fi
         else
-          echo "Error: libft.a no se encuentra en el directorio local."
+          echo "Error: tester_libft.a no se encuentra en el directorio local."
           echo "Current directory: $(pwd)"
           ls -la
           exit 1
